Creating post  form

--- a/Social/templates/index.html
+++ b/Social/templates/index.html
@@ -71,7 +71,7 @@
                             </span>
                         </div>
                         <div class="photo">
-                            <img src="{{post.picture.url}}">
+                            <img src="{{post.picture.url}}" style="height: 381px; object-fit: cover;" >
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">
