Post-Detail and Tags

--- a/Social/templates/index.html
+++ b/Social/templates/index.html
@@ -71,7 +71,8 @@
                             </span>
                         </div>
                         <div class="photo">
-                            <img src="{{post.picture.url}}" style="height: 381px; object-fit: cover;" >
+                            <a href="{%url 'post-details' post.id%}"><img src="{{post.picture.url}}" style="height: 381px; object-fit: cover;" >
+                        </a>
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">
@@ -92,271 +93,13 @@
                         </div>
                         <div class="caption">
                             <p><b>{{post.user.username}}</b> {{post.caption}}
-                                 <span class="harsh-tag">{% for tag in post.tag.all%}<a href ="{{tags.get_absolute_url}}">#{{tag}}</a>{% endfor %}</span></p>
+                                 <span class="harsh-tag">{% for tag in post.tag.all%}<a href ="{{tag.get_absolute_url}}">#{{tag.title}}</a>{% endfor %}</span></p>
                         </div>
                         <div>
                             <div class="comments text-muted">View all 269 commments</div>
                         </div>
                     </div>
-                    {% endfor %}
-                     <!-------------------------FEED2------------------------->
-                     <!-- <div class="feed">
-                        <div class="head">
-                            <div class="user">
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-10.jpg'%}">
-                                </div>
-                                <div class="ingo">
-                                    <h3>Jonty Roades</h3>
-                                    <small>Australia, 45 MINUTES AGO</small>
-                                </div>
-                            </div>
-                            <span class="edit">
-                                <i class="uil uil-ellipsis-h"></i>
-                            </span>
-                        </div>
-                        <div class="photo">
-                            <img src="{% static 'images/feed-2.jpg'%}">
-                        </div>
-                        <div class="action-buttons">
-                            <div class="interaction-buttons">
-                                <span><i class="uil uil-heart"></i></span>
-                                <span><i class="uil uil-comment-dots"></i></span>
-                                <span><i class="uil uil-share-alt"></i></span>
-                            </div>
-                            <div class="bookmark">
-                                <span><i class="uil uil-bookmark"></i></span>
-                            </div>
-                        </div>
-                        <div class="liked-by">
-                            <span><img src="{% static 'images/profile-14.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-3.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-5.jpg'%}"></span>
-                            <p>Liked by <b>Lina Rose </b> and <b>532 others</b>
-                        </div>
-                        <div class="caption">
-                            <p><b>Gwen </b> Lorem ipsum dolor sit amet
-                                consectetur. <span class="harsh-tag">#lifestyle</span></p>
-                        </div>
-                        <div>
-                            <div class="comments text-muted">View all 269 commments</div>
-                        </div>
-                    </div> -->
-                     <!-------------------------FEED3------------------------->
-                     <!-- <div class="feed">
-                        <div class="head">
-                            <div class="user">
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-6.jpg'%}">
-                                </div>
-                                <div class="ingo">
-                                    <h3>Mark Duck</h3>
-                                    <small>UK, 1 HOUR AGO</small>
-                                </div>
-                            </div>
-                            <span class="edit">
-                                <i class="uil uil-ellipsis-h"></i>
-                            </span>
-                        </div>
-                        <div class="photo">
-                            <img src="{% static 'images/feed-3.jpg'%}">
-                        </div>
-                        <div class="action-buttons">
-                            <div class="interaction-buttons">
-                                <span><i class="uil uil-heart"></i></span>
-                                <span><i class="uil uil-comment-dots"></i></span>
-                                <span><i class="uil uil-share-alt"></i></span>
-                            </div>
-                            <div class="bookmark">
-                                <span><i class="uil uil-bookmark"></i></span>
-                            </div>
-                        </div>
-                        <div class="liked-by">
-                            <span><img src="{% static 'images/profile-12.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-9.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-7.jpg'%}"></span>
-                            <p>Liked by <b>Ben </b> and <b>898 others</b>
-                        </div>
-                        <div class="caption">
-                            <p><b>Watson</b> Lorem ipsum dolor sit amet
-                                consectetur. <span class="harsh-tag">#lifestyle</span></p>
-                        </div>
-                        <div>
-                            <div class="comments text-muted">View all 29 commments</div>
-                        </div>
-                    </div> -->
-                     <!-------------------------FEED4------------------------->
-                     <!-- <div class="feed">
-                        <div class="head">
-                            <div class="user">
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-9.jpg'%}">
-                                </div>
-                                <div class="ingo">
-                                    <h3>Ben Teneson</h3>
-                                    <small>Itally, 2 DAYS AGO</small>
-                                </div>
-                            </div>
-                            <span class="edit">
-                                <i class="uil uil-ellipsis-h"></i>
-                            </span>
-                        </div>
-                        <div class="photo">
-                            <img src="{% static 'images/feed-4.jpg'%}">
-                        </div>
-                        <div class="action-buttons">
-                            <div class="interaction-buttons">
-                                <span><i class="uil uil-heart"></i></span>
-                                <span><i class="uil uil-comment-dots"></i></span>
-                                <span><i class="uil uil-share-alt"></i></span>
-                            </div>
-                            <div class="bookmark">
-                                <span><i class="uil uil-bookmark"></i></span>
-                            </div>
-                        </div>
-                        <div class="liked-by">
-                            <span><img src="{% static 'images/profile-10.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-11.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-12.jpg'%}"></span>
-                            <p>Liked by <b>Gwen Teneson</b> and <b>29 others</b>
-                        </div>
-                        <div class="caption">
-                            <p><b>Parker</b> Lorem ipsum dolor sit amet
-                                consectetur. <span class="harsh-tag">#lifestyle</span></p>
-                        </div>
-                        <div>
-                            <div class="comments text-muted">View all 2 commments</div>
-                        </div>
-                    </div> -->
-                     <!-------------------------FEED5------------------------->
-                     <!-- <div class="feed">
-                        <div class="head">
-                            <div class="user">
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-7.jpg'%}">
-                                </div>
-                                <div class="ingo">
-                                    <h3>Mary Jane</h3>
-                                    <small>MIT, 59 MINUTES AGO</small>
-                                </div>
-                            </div>
-                            <span class="edit">
-                                <i class="uil uil-ellipsis-h"></i>
-                            </span>
-                        </div>
-                        <div class="photo">
-                            <img src="{% static 'images/feed-5.jpg'%}">
-                        </div>
-                        <div class="action-buttons">
-                            <div class="interaction-buttons">
-                                <span><i class="uil uil-heart"></i></span>
-                                <span><i class="uil uil-comment-dots"></i></span>
-                                <span><i class="uil uil-share-alt"></i></span>
-                            </div>
-                            <div class="bookmark">
-                                <span><i class="uil uil-bookmark"></i></span>
-                            </div>
-                        </div>
-                        <div class="liked-by">
-                            <span><img src="{% static 'images/profile-10.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-11.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-12.jpg'%}"></span>
-                            <p>Liked by <b>Gin </b> and <b>2,332 others</b>
-                        </div>
-                        <div class="caption">
-                            <p><b>James Bond</b> Lorem ipsum dolor sit amet
-                                consectetur. <span class="harsh-tag">#lifestyle</span></p>
-                        </div>
-                        <div>
-                            <div class="comments text-muted">View all 269 commments</div>
-                        </div>
-                    </div> -->
-                     <!-------------------------FEED6------------------------->
-                     <!-- <div class="feed">
-                        <div class="head">
-                            <div class="user">
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-7.jpg'%}">
-                                </div>
-                                <div class="ingo">
-                                    <h3>Bruce Wane</h3>
-                                    <small>Goatham, 5 MINUTES AGO</small>
-                                </div>
-                            </div>
-                            <span class="edit">
-                                <i class="uil uil-ellipsis-h"></i>
-                            </span>
-                        </div>
-                        <div class="photo">
-                            <img src="{% static 'images/feed-6.jpg'%}">
-                        </div>
-                        <div class="action-buttons">
-                            <div class="interaction-buttons">
-                                <span><i class="uil uil-heart"></i></span>
-                                <span><i class="uil uil-comment-dots"></i></span>
-                                <span><i class="uil uil-share-alt"></i></span>
-                            </div>
-                            <div class="bookmark">
-                                <span><i class="uil uil-bookmark"></i></span>
-                            </div>
-                        </div>
-                        <div class="liked-by">
-                            <span><img src="{% static 'images/profile-10.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-11.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-12.jpg'%}"></span>
-                            <p>Liked by <b>Black Cat </b> and <b>2,332 others</b>
-                        </div>
-                        <div class="caption">
-                            <p><b>Black Cat</b> Lorem ipsum dolor sit amet
-                                consectetur. <span class="harsh-tag">#lifestyle</span></p>
-                        </div>
-                        <div>
-                            <div class="comments text-muted">View all 269 commments</div>
-                        </div>
-                    </div> -->
-                     <!-------------------------FEED7------------------------->
-                     <!-- <div class="feed">
-                        <div class="head">
-                            <div class="user">
-                                <div class="profile-photo">
-                                    <img src="{% static 'images/profile-15.jpg'%}">
-                                </div>
-                                <div class="ingo">
-                                    <h3>Morty </h3>
-                                    <small>Rome, 15 MINUTES AGO</small>
-                                </div>
-                            </div>
-                            <span class="edit">
-                                <i class="uil uil-ellipsis-h"></i>
-                            </span>
-                        </div>
-                        <div class="photo">
-                            <img src="{% static 'images/feed-7.jpg'%}">
-                        </div>
-                        <div class="action-buttons">
-                            <div class="interaction-buttons">
-                                <span><i class="uil uil-heart"></i></span>
-                                <span><i class="uil uil-comment-dots"></i></span>
-                                <span><i class="uil uil-share-alt"></i></span>
-                            </div>
-                            <div class="bookmark">
-                                <span><i class="uil uil-bookmark"></i></span>
-                            </div>
-                        </div>
-                        <div class="liked-by">
-                            <span><img src="{% static 'images/profile-10.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-11.jpg'%}"></span>
-                            <span><img src="{% static 'images/profile-12.jpg'%}"></span>
-                            <p>Liked by <b>Rick </b> and <b>2,332 others</b>
-                        </div>
-                        <div class="caption">
-                            <p><b>JRick</b> Lorem ipsum dolor sit amet
-                                consectetur. <span class="harsh-tag">#lifestyle</span></p>
-                        </div>
-                        <div>
-                            <div class="comments text-muted">View all 2 commments</div>
-                        </div>
-                    </div>  -->
+                    {% endfor %}                  
                     <!----------------End of FEED----------->
                 </div>
                 <!----------------End of FEEDS----------->
@@ -524,64 +267,4 @@
                 </div>
             </div>   
             <!--===========================END OF RIGHT====================-->
-        </div>
-    </main>
-
-   <!--=======================================THEME CUSTOMIZATION========================--> 
-   <div class="customize-theme">
-    <div class="card">
-        <h2>Customize your view</h2>
-        <p class="text-muted">Manage your font size,color and background.</p>
-
-        <!--------------------FONT SIZES-------------->
-        <div class="font-size">
-            <h4>Font Size</h4>
-            <div>
-                <h6>Aa</h6>
-                <div class="choose-size">
-                    <span class="font-size-1"></span>
-                    <span class="font-size-2"></span>
-                    <span class="font-size-3"></span>
-                    <span class="font-size-4"></span>
-                    <span class="font-size-5"></span>
-                </div>
-                <h3>Aa</h3>
-            </div>
-        </div>
-
-        <!-------------------PRIMARY COLORS-------------->
-        <div class="color">
-            <h4>Color</h4>
-            <div class="choose-color">
-                <span class="color-1 active"></span>
-                <span class="color-2 "></span>
-                <span class="color-3"></span>
-                <span class="color-4"></span>
-                <span class="color-5"></span>
-            </div>
-         </div>
-
-         <!--------------------BACKGROUND COLOR------------------>
-         <div class="background">
-            <h4>Background</h4>
-            <div class="choose-bg active">
-                <div class="bg-1">
-                    <span></span>
-                    <h5 for="bg-1">Light</h5>
-                </div>
-                <div class="bg-2">
-                    <span></span>
-                    <h5>Dim</h5>
-                </div>
-                <div class="bg-3">
-                    <span></span>
-                    <h5 for="bg-3">Light Out</h5>
-                </div>
-            </div>
-         </div>
-    </div>
-   </div>
-
-<script src= "{% static './index.js' %}" ></script>
-
 {% endblock content %}
