--- a/Social/templates/index.html
+++ b/Social/templates/index.html
@@ -71,14 +71,19 @@
                             </span>
                         </div>
                         <div class="photo">
-                            <a href="{%url 'post-details' post.id%}"><img src="{{post.picture.url}}" style="height: 381px; object-fit: cover;" >
+                            <a href="{%url 'post-details' post.id%}"><img src="{{post.picture.url}}" alt="Alternative text" style="height: 381px; object-fit: cover;" >
                         </a>
                         </div>
                         <div class="action-buttons">
                             <div class="interaction-buttons">
-                                <a href = "{% url 'like' post.id %}">
+                                {% comment %} <a href = "{% url 'like' post.id %}">
                                     <span><i class="uil uil-heart"></i></span>
-                                 </a>
+                                 </a> {% endcomment %}
+                                <a href="#" class="like-button" data-url="{% url 'like' post.id %}" data-post-id="{{ post.id }}">
+                                    <span>
+                                        <i class="uil uil-heart{% if user in post.post_likes.all %} liked{% endif %}"></i>
+                                    </span>
+                                </a>
                                 <span><i class="uil uil-comment-dots"></i></span>
                                 <span><i class="uil uil-share-alt"></i></span>
                             </div>
@@ -91,7 +96,7 @@
                             <span><img src="{% static 'images/profile-11.jpg'%}"></span>
                             <span><img src="{% static 'images/profile-12.jpg'%}"></span> -->
                             <!-- <p>Liked by <b>Gin </b> and <b>2,332 others</b> -->
-                            <p><b>{{post.likes}}</b> Likes
+                            <p id="like-count-{{ post.id }}"><b>{{ post.likes }}</b> Likes</p>
                         </div>
                         <div class="caption">
                             <p><b>{{post.user.username}}</b> {{post.caption}}
